# fourier_experiments

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
src/: main.cpp  ppm.h  types.h
src/maths/: maths_utils.h  vector3.h
src/utils/: dft.h  image.h  maths.h  ppm.h  types.h
submodules/: CMakeLists.txt
